# vmlu-maxxing

./: AGENTS.md  DEVELOPMENT.md  launch_sglang.sh  main.py  pyproject.toml  submission.csv
scripts/: run_all.py  run_phase0.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  upload_data.py
src/vmlu_maxxing/: cli.py  collators.py  consts.py  distill_teacher.py  evaluate.py  export.py  ingest_sources.py  prepare_cpt.py  prepare_sft.py  sanity_check.py  train_cpt.py  train_kd.py  train_sft.py  translate_pipeline.py
tests/: test_distillation.py  test_tokenizer.py
