[project]
name = "vmlu-maxxing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "asyncio>=4.0.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.1",
    "evaluate>=0.4.6",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "trl>=0.29.0",
    "underthesea>=9.2.11",
]
